# PCL-object-recognition

./: CMakeLists.txt  README.md  recognize_object.cpp  recognize_objects.h
training_data/000.580.67/: 1258250240333_cluster_0_nxyz.pcd  1258250240333_cluster_0_nxyz_vfh.pcd  1258250242333_cluster_0_nxyz.pcd  1258250242333_cluster_0_nxyz_vfh.pcd  1258290249333_cluster_0_nxyz.pcd  1258290249333_cluster_0_nxyz_vfh.pcd  1258290249333_cluster_1_nxyz.pcd  1258290249333_cluster_1_nxyz_vfh.pcd  1258570238333_cluster_0_nxyz.pcd  1258570238333_cluster_0_nxyz_vfh.pcd  1258570238333_cluster_1_nxyz.pcd  1258570238333_cluster_1_nxyz_vfh.pcd  1258690248333_cluster_0_nxyz.pcd  1258690248333_cluster_0_nxyz_vfh.pcd  1258690248333_cluster_1_nxyz.pcd  1258690248333_cluster_1_nxyz_vfh.pcd  1258730231333_cluster_0_nxyz.pcd  1258730231333_cluster_0_nxyz_vfh.pcd  1258730231333_cluster_1_nxyz.pcd  1258730231333_cluster_1_nxyz_vfh.pcd  1259010248333_cluster_0_nxyz.pcd  1259010248333_cluster_0_nxyz_vfh.pcd  1259010248333_cluster_1_nxyz.pcd  1259010248333_cluster_1_nxyz_vfh.pcd  1259010249333_cluster_0_nxyz.pcd  1259010249333_cluster_0_nxyz_vfh.pcd  1259010249333_cluster_1_nxyz.pcd  1259010249333_cluster_1_nxyz_vfh.pcd  1259050252333_cluster_0_nxyz.pcd  1259050252333_cluster_0_nxyz_vfh.pcd  1259050252333_cluster_1_nxyz.pcd  1259050252333_cluster_1_nxyz_vfh.pcd
training_data/001.324.25/: 1258139081333_cluster_0_nxyz.pcd  1258139081333_cluster_0_nxyz_vfh.pcd  1258139081333_cluster_1_nxyz.pcd  1258139081333_cluster_1_nxyz_vfh.pcd  1258139084333_cluster_0_nxyz.pcd  1258139084333_cluster_0_nxyz_vfh.pcd  (+20 more)
(+332 files in other folders)
